feat: contribution completed

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -359,3 +359,12 @@ keywords={fairness, post-processing, counterfactual, risk assessment},
 location={Virtual Event, Canada},
 series={FAccT '21}
 }
+
+@article{Gupta2018ProxyF,
+title={Proxy Fairness},
+author={Maya R. Gupta and Andrew Cotter and Mahdi Milani Fard and Serena Lutong Wang},
+journal={ArXiv},
+year={2018},
+volume={abs/1806.11212},
+url={https://api.semanticscholar.org/CorpusID:49555790}
+}
