--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -795,7 +795,8 @@ This module is the core of the whole algorithm. This module contains other two s
 
     \end{lstlisting}
     \begin{lstlisting}
-        def proxy_fixing(original_dataset: pd.DataFrame, protected_attributes: list) -> pd.DataFrame:
+        def proxy_fixing(original_dataset: pd.DataFrame, 
+        protected_attributes: list) -> pd.DataFrame:
     """This method returns a dataset with proxy variables founded in the original dataset analyzed.
     In case these proxies lead to unfairness the proxies are deleted
 
@@ -815,8 +816,9 @@ This module is the core of the whole algorithm. This module contains other two s
         for antecedent in row['Antecedent']:
             consequent = row['Consequent']
 
-            disparate_impact_value = _compute_disparate_impact_for_proxy(antecedent, consequent,
-                                                                         original_dataset)
+            disparate_impact_value = _compute_disparate_impact_for_proxy(
+                antecedent, consequent,original_dataset)
+                
             if not 0.8 < disparate_impact_value < 1.25 and _proxy_format_to_column(antecedent) not in protected_attributes:
                 dataset = _remove_proxy_from_dataset(original_dataset, antecedent)
 
